--- a/Eggcellent_Ext/data/pages/main/style.css
+++ b/Eggcellent_Ext/data/pages/main/style.css
@@ -41,6 +41,7 @@ body {
 }
 .preserve-position .search-container {
   background-color: rgba(29, 30, 43, 0.4980392157);
+  background-size: cover;
   border: 1px solid rgba(82, 82, 111, 0.4392156863);
   box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.2);
   width: 700px;
@@ -223,6 +224,27 @@ body {
 }
 .preserve-position .search-container .footer .button.active, .preserve-position .search-container .footer .button:active {
   scale: 0.9;
+}
+
+.logo {
+  position: absolute;
+  left: 10px;
+  bottom: 10px;
+  width: 40px;
+  height: 40px;
+  transition: 0.2s;
+  cursor: pointer;
+  background: url("../../assets/icons/512x512_Outlined.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+}
+.logo:hover {
+  background: url("../../assets/icons/512x512.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.2);
 }
 
 @keyframes show {
