--- a/shared/_styles.scss
+++ b/shared/_styles.scss
@@ -2,6 +2,9 @@ $bg: #191A23;
 $bg-lighter: #1c1d2a;
 $bg-dark: #151621;
 
+$egg: #F4BB29;
+$egg-light: #F4BB2930;
+
 $primary: #575ac6;
 $primary-light: #575ac630;
 $danger: #eb5757;
@@ -30,9 +33,10 @@ $tabs-active-border: 1px solid #313248;
 
 $popup-color: #242631;
 $popup-opaque-color: #1d1e2b7f;
-$popup-hover-color: #2f313e;
+$popup-hover-color: #7c7ca320;
 $popup-shadow: 0px 4px 24px #00000033;
 $popup-border: 1px solid #52526f70;
+$popup-border-color: #52526f70;
 
 $button-color: #272939;
 $button-shadow: 0px 2px 4px #0000001a;
