--- a/Eggcellent_Ext/data/pages/main/style.scss
+++ b/Eggcellent_Ext/data/pages/main/style.scss
@@ -16,6 +16,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: Inter;
 }
 
 html {
@@ -38,10 +39,11 @@ body {
 
 .preserve-position {
   width: 700px;
-  height: 538.2px;
+  height: 537px;
   display: flex;
   justify-content: center;
   align-items: flex-start;
+  position: relative;
 
   .search-container {
     background-color: s.$popup-opaque-color;
@@ -52,9 +54,9 @@ body {
     padding: 10px;
     border-radius: 8px;
     height: max-content;
+    transition: 0.2s;
     scale: 0.8;
     opacity: 0.2;
-    transition: 0.2s;
     animation: show 0.3s cubic-bezier(0.7, 0, 0.7, 1) 0s 1 forwards;
 
     .search-bar {
@@ -110,6 +112,8 @@ body {
       width: calc(100% - 20px);
       margin: 10px;
       user-select: none;
+      height: 400px;
+      transition: 0.1s;
 
       .result {
         display: flex;
@@ -171,6 +175,10 @@ body {
           place-items: center;
 
           font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 24 !important;
+
+          &.favorite {
+            color: s.$egg;
+          }
         }
 
         &.always-select {
@@ -192,7 +200,7 @@ body {
 
     .footer {
       display: grid;
-      grid-template-columns: repeat(3, calc(100% / 3));
+      grid-template-columns: repeat(4, calc(100% / 4));
       width: calc(100% - 20px);
       margin: 15px;
       user-select: none;
@@ -201,6 +209,12 @@ body {
       align-items: center;
       justify-content: center;
       color: s.$icon-color;
+
+      .rcount {
+        justify-self: end;
+        font-size: 14px;
+        color: s.$text-color-dark;
+      }
 
       .key {
         display: flex;
@@ -211,43 +225,23 @@ body {
           font-size: 13px;
           font-weight: 300;
         }
-      }
-
-      .rcount {
-        justify-self: end;
-        font-size: 14px;
-        color: s.$text-color-dark;
-      }
-
-      .button {
-        align-items: center;
-        background: linear-gradient(
-          -26.5deg,
-          s.$button-hover-color,
-          s.$button-color
-        ) !important;
-        border: 0;
-        border-radius: 3px;
-        box-shadow: inset 0 -2px 0 0 s.$button-border, s.$button-shadow !important;
-        color: s.$text-color-dark;
-        display: flex;
-        justify-content: center;
-        margin-right: 4px;
-        padding: 4px;
-        box-sizing: border-box;
-        width: max-content;
-        position: relative;
-        font-size: 14px;
-        transition: 0.2s;
-        cursor: pointer;
-
-        &:hover {
-          scale: 1.1;
-        }
-
-        &.active,
-        &:active {
-          scale: 0.9;
+        .button {
+          align-items: center;
+          background: s.$button-color;
+          border: 0;
+          border-radius: 3px;
+          border: s.$button-border;
+          box-shadow: s.$button-shadow !important;
+          color: s.$text-color-dark;
+          display: flex;
+          justify-content: center;
+          margin-right: 4px;
+          padding: 4px;
+          box-sizing: border-box;
+          width: max-content;
+          position: relative;
+          font-size: 14px;
+          transition: 0.2s;
         }
       }
     }
@@ -273,6 +267,132 @@ body {
     background-size: contain;
     background-position: center;
     box-shadow: s.$popup-shadow;
+  }
+}
+
+.context-menu {
+  position: absolute;
+  background-color: s.$popup-opaque-color;
+  border-radius: 8px;
+  backdrop-filter: blur(10px);
+  border: s.$popup-border;
+  top: 70px;
+  left: calc(100% - 10px);
+  font-size: 16px;
+  display: flex;
+  flex-direction: column;
+  color: s.$text-color-light;
+  min-width: 160px;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  box-shadow: s.$popup-shadow;
+
+  .menu-separator {
+    height: 1px;
+    margin: 4px;
+    margin-inline: 0px;
+    background-color: s.$popup-border-color;
+  }
+
+  .menu-item {
+    display: flex;
+    margin-inline: 4px;
+    padding: 5px;
+    padding-right: 5px;
+    padding-left: 10px;
+    gap: 8px;
+    align-items: center;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: 0.1s;
+    height: 35px;
+
+    .menu-item-icon {
+      color: s.$text-color-dark;
+      font-size: 20px;
+    }
+
+    .menu-item-text {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      width: 100%;
+
+      .key {
+        align-items: center;
+        background: s.$button-color;
+        border: 0;
+        border-radius: 3px;
+        border: s.$button-border;
+        box-shadow: s.$button-shadow !important;
+        color: s.$text-color-dark;
+        display: flex;
+        justify-content: center;
+        padding: 4px;
+        height: 100%;
+        box-sizing: border-box;
+        width: max-content;
+        position: relative;
+        font-size: 11px;
+        transition: 0.2s;
+      }
+    }
+
+    &.favorite {
+      color: s.$egg;
+
+      .menu-item-icon {
+        color: s.$egg;
+        font-size: 20px;
+      }
+
+      &:hover {
+        background-color: s.$egg-light;
+      }
+    }
+
+    &.link {
+      color: s.$primary;
+
+      .menu-item-icon {
+        color: s.$primary;
+        font-size: 20px;
+      }
+
+      &:hover {
+        background-color: s.$primary-light;
+      }
+    }
+
+    &.ok {
+      color: s.$success;
+
+      .menu-item-icon {
+        color: s.$success;
+        font-size: 20px;
+      }
+
+      &:hover {
+        background-color: s.$success-light;
+      }
+    }
+
+    &.danger {
+      color: s.$danger;
+
+      .menu-item-icon {
+        color: s.$danger;
+        font-size: 20px;
+      }
+
+      &:hover {
+        background-color: s.$danger-light;
+      }
+    }
+
+    &:hover {
+      background-color: s.$popup-hover-color;
+    }
   }
 }
 
