--- a/Eggcellent_Ext/data/pages/main/style.css
+++ b/Eggcellent_Ext/data/pages/main/style.css
@@ -249,6 +249,9 @@ body {
 }
 
 .context-menu {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
   position: absolute;
   background-color: rgba(29, 30, 43, 0.4980392157);
   border-radius: 8px;
