--- a/Eggcellent_Ext/data/pages/main/style.css
+++ b/Eggcellent_Ext/data/pages/main/style.css
@@ -261,7 +261,7 @@ body {
   top: 70px;
   left: calc(100% - 10px);
   font-size: 16px;
-  display: flex;
+  display: none;
   flex-direction: column;
   color: #eeeffc;
   min-width: 160px;
@@ -301,6 +301,12 @@ body {
   text-wrap: nowrap;
   white-space: nowrap;
 }
+.context-menu .menu-item .menu-item-text .keys {
+  display: flex;
+  gap: 5px;
+  margin-left: 10px;
+  display: none;
+}
 .context-menu .menu-item .menu-item-text .key {
   align-items: center;
   background: #272939;
@@ -327,7 +333,7 @@ body {
   color: #F4BB29;
   font-size: 20px;
 }
-.context-menu .menu-item.favorite:hover {
+.context-menu .menu-item.favorite:hover, .context-menu .menu-item.favorite.selected {
   background-color: rgba(244, 187, 41, 0.1882352941);
 }
 .context-menu .menu-item.link {
@@ -337,7 +343,7 @@ body {
   color: #575ac6;
   font-size: 20px;
 }
-.context-menu .menu-item.link:hover {
+.context-menu .menu-item.link:hover, .context-menu .menu-item.link.selected {
   background-color: rgba(87, 90, 198, 0.1882352941);
 }
 .context-menu .menu-item.ok {
@@ -347,7 +353,7 @@ body {
   color: #4cb782;
   font-size: 20px;
 }
-.context-menu .menu-item.ok:hover {
+.context-menu .menu-item.ok:hover, .context-menu .menu-item.ok.selected {
   background-color: rgba(76, 183, 130, 0.1882352941);
 }
 .context-menu .menu-item.danger {
@@ -357,10 +363,10 @@ body {
   color: #eb5757;
   font-size: 20px;
 }
-.context-menu .menu-item.danger:hover {
+.context-menu .menu-item.danger:hover, .context-menu .menu-item.danger.selected {
   background-color: rgba(235, 87, 87, 0.1882352941);
 }
-.context-menu .menu-item:hover {
+.context-menu .menu-item:hover, .context-menu .menu-item.selected {
   background-color: rgba(124, 124, 163, 0.1254901961);
 }
 
