--- a/Eggcellent_Ext/data/pages/main/style.scss
+++ b/Eggcellent_Ext/data/pages/main/style.scss
@@ -280,7 +280,7 @@ body {
   top: 70px;
   left: calc(100% - 10px);
   font-size: 16px;
-  display: flex;
+  display: none;
   flex-direction: column;
   color: s.$text-color-light;
   min-width: 160px;
@@ -321,6 +321,13 @@ body {
       margin-right: 5px;
       text-wrap: nowrap;
       white-space: nowrap;
+
+      .keys {
+        display: flex;
+        gap: 5px;
+        margin-left: 10px;
+        display: none;
+      }
 
       .key {
         align-items: center;
