--- a/shared/_default.scss
+++ b/shared/_default.scss
@@ -1,18 +1,18 @@
-$bg: #191A23;
-$bg-lighter: #1c1d2a;
+$bg: #181A24;
+$bg-lighter: #1b1d2b;
 $bg-dark: #151621;
 
 $egg: #F4BB29;
 $egg-light: #F4BB2930;
 
-$primary: #575ac6;
+$primary: #565ac7;
 $primary-light: #575ac630;
 $danger: #eb5757;
 $danger-light: #eb575730;
 $success: #4cb782;
 $success-light: #4cb78230;
 
-$text-color: #d2d3e0;
+$text-color: #d1d3e1;
 $text-color-dark: #858699;
 $text-color-light: #eeeffc;
 
