--- a/Eggcellent/pages/main/style.scss
+++ b/Eggcellent/pages/main/style.scss
@@ -59,6 +59,15 @@ $button-hover-border: 1px solid #3e3e4a;
   font-display: swap;
 }
 
+@keyframes rotate {
+  from {
+    rotate: 0deg;
+  }
+  to {
+    rotate: 360deg;
+  }
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -188,7 +197,7 @@ html {
 
           .icon {
             height: 25px !important;
-            aspect-ratio: 1 / 1;
+            width: 25px !important;
             border-radius: 2px;
 
             border-radius: 4px;
@@ -203,6 +212,11 @@ html {
               "wght" 400,
               "GRAD" 0,
               "opsz" 24 !important;
+
+            &.rotate {
+              rotate: 0deg;
+              animation: rotate 2s linear infinite;
+            }
           }
 
           .text {
@@ -257,6 +271,21 @@ html {
 
           &.always-select {
             background-color: $danger-light;
+
+            .qa-icon {
+              color: $icon-color;
+            }
+
+            .text {
+              color: $text-color-light;
+              .desc {
+                color: $text-color;
+              }
+            }
+          }
+
+          &.blue {
+            background-color: $primary-light;
 
             .qa-icon {
               color: $icon-color;
